# gaiagate-viewer

./: Procfile  build.sh  manage.py  pyproject.toml  render.yaml  requirements.txt
gaiagate/: asgi.py  settings.py  urls.py  wsgi.py
static/js/: showobjects.js
static/viewer/js/: mainviewer.js
tests/: test_gaiagate.py
unwiishedviewer/: admin.py  apps.py  models.py  urls.py  views.py
unwiishedviewer/migrations/: 0001_initial.py
unwiishedviewer/templates/viewer/: base.html  detail_basic.html  stagelist.html  viewer.html
web_sets/: set_111_area_A.json  set_111_area_B.json  set_111_area_C.json  set_116_area_A.json  set_121_area_A.json  set_121_area_B.json  set_121_area_C.json  set_125_area_A.json  set_126_area_A.json  set_131_area_A.json  set_131_area_B.json  set_131_area_C.json  set_136_area_A.json  set_141_area_A.json  set_141_area_B.json  set_141_area_C.json  set_145_area_A.json  set_146_area_A.json  set_151_area_A.json  set_151_area_B.json  set_151_area_C.json  set_151_area_D.json  set_152_area_A.json  set_152_area_B.json  set_155_area_A.json  set_156_area_A.json  set_161_area_A.json  set_161_area_B.json  set_161_area_C.json  set_161_area_D.json  set_166_area_A.json  set_171_area_A.json  set_171_area_B.json  set_171_area_C.json  set_171_area_D.json  set_171_area_E.json  set_174_area_A.json  set_174_area_B.json  set_174_area_C.json  set_175_area_A.json  (+1 more)
